--- a/playmor/nodevenv/public_html/yard/16/lib/package.json
+++ b/playmor/nodevenv/public_html/yard/16/lib/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.7.2",
     "pdfkit": "^0.13.0"
   }
